oops: add env example needed across existing scripts/

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
 RPC_URL=https://arb1.arbitrum.io/rpc
 UI_POOL_ADDRESS=0x5c5228aC8BC1528482514aF3e27E692495148717
 POOL_PROVIDER_ADDRESS=0xa97684ead0e402dc232d5a977953df7ecbab3cdb
+ARBITRUM_RPC_URL=https://young-side-paper.arbitrum-mainnet.quiknode.pro/***
+PRIVATE_KEY=0xYOUR_PRIVATE_KEY_HERE
+ARBISCAN_API_KEY=YOUR_API_KEY
+PROFIT_TOKEN=0xYOUR_PROFIT_TOKEN
+REVENANT_CORE_EXECUTORVI=0xREVENANT_CORE_EXECUTOR_VI_DEPLOYED_CONTRACT_ADDRESS
+RADIANT_POOL=0xRADIANT_POOL_ADDRESS
+AAVE_POOL_PROVIDER_ADDRESS=0xAAVE_POOL_PROVIDER_ADDRESS
+QUICKNODE_RPC_API=https://young-side-paper.arbitrum-mainnet.quiknode.pro/***
 
